force-app/main/default/objects/Observation__c/Observation__c.object-meta.xml
<CustomObject>
    <description>Each record is a data point on an individual inspection</description>
    <label>Observation</label>
    <nameField>
        <displayFormat>OB-{0000}</displayFormat>
        <label>Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>