force-app/main/default/objects/Observation__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Lender_Attribute__c</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>Lookup</type>
</CustomField>